--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -1089,7 +1089,8 @@ html, body {
 
 
 .paralex {
-    background-image:url("/assets/img/office.jpg");
+/*     background-image:url("/assets/img/office.jpg"); */
+    background-image:url("../img/office.jpg");
     position: relative;
     width: 100%;
     height: 40vh; 
