--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -504,6 +504,85 @@ html, body {
     }
 }
 
+@media (max-width: 360px) {
+    .welcome-heading {
+        font-size: 24px; /* Reduced font size */
+        margin-top: 49px;
+    }
+
+    #background-video {
+        margin-top: -226px;
+        width: 100%; /* Full-width background */
+        height: 20vh; /* Smaller height */
+    }
+
+    .welcome-tagline {
+        font-size: 12px; /* Reduced font size */
+        margin: 10px 5px; /* Adjusted margin */
+        text-align: center;
+        line-height: 1.3; /* Adjusted line height */
+    }
+
+    #dropdown {
+        width: 30px; /* Adjusted width */
+        height: 30px; /* Adjusted height */
+        margin-left: 164px;
+        margin-top: 10px; /* Adjusted top margin */
+    }
+}
+
+@media (max-width: 320px) {
+    .welcome-heading {
+        font-size: 20px; /* Further reduced font size */
+        margin-top: 64px;
+    }
+
+    #background-video {
+        margin-top: -220px;
+    width: 100%;
+    height: 23vh;
+    }
+
+    .welcome-tagline {
+        font-size: 10px; /* Smaller tagline text */
+        margin: 8px 5px;
+        text-align: center;
+    }
+
+    #dropdown {
+        width: 25px; /* Smaller size */
+        height: 25px;
+        margin-left: 150px;
+        margin-top: 5px; /* Adjusted top margin */
+    }
+}
+
+@media (max-width: 280px) {
+    .welcome-heading {
+        font-size: 18px; /* Minimal size for readability */
+        margin-top: 30px; /* Adjusted spacing */
+    }
+
+    #background-video {
+        margin-top: -120px;
+        width: 100%;
+        height: 12vh; /* Minimum height for very small screens */
+    }
+
+    .welcome-tagline {
+        font-size: 9px; /* Tiny text for compact devices */
+        margin: 5px 5px;
+        text-align: center;
+    }
+
+    #dropdown {
+        width: 20px; /* Further reduced size */
+        height: 20px;
+        margin-left: 100px; /* Centered for ultra-small screens */
+        margin-top: 5px;
+    }
+}
+
 
 
 
@@ -602,121 +681,158 @@ html, body {
 
 
 
-
-
-@media (max-width: 1024px) {
+@media (max-width: 64em) { /* 1024px */
     #intro1 {
-        width: 400px; 
-        height: 500px;
-        margin-top: -200px;
-        margin-left: 50px; 
+        width: 25em;
+        height: 31.25em;
+        margin-top: -12.5em;
+        margin-left: 3.125em;
     }
 
     .intro h2 {
-        margin-right: 380px; 
-        margin-top: -250px; 
-        font-size: 32px; 
+        margin-right: 23.75em;
+        margin-top: -15.625em;
+        font-size: 2em;
     }
 
     .intro p {
-        margin-top: -140px; 
-        margin-left: 620px; 
-        margin-right: 150px; 
-        font-size: 14px; 
+        margin-top: -8.75em;
+        margin-left: 38.75em;
+        margin-right: 9.375em;
+        font-size: 0.875em;
     }
 
     .container {
-        transform: translateX(440px); 
-        gap: 40px; 
+        transform: translateX(27.5em);
+        gap: 2.5em;
     }
 
     #intro2,
     #intro3,
     #intro4 {
-        width: 200px;
-        height: 180px; 
+        width: 12.5em;
+        height: 11.25em;
     }
 }
 
-
-@media (max-width: 768px) {
+@media (max-width: 48em) { /* 768px */
     #intro1 {
-        width: 300px;
-        height: 400px;
-        margin-top: 30px; 
-        margin-left: 20px;
+        width: 18.75em;
+        height: 25em;
+        margin-top: 1.875em;
+        margin-left: 1.25em;
     }
 
     .intro h2 {
-        margin-right: 130px;
-        margin-top: -500px;
-        font-size: 24px;
+        margin-right: 8.125em;
+        margin-top: -31.25em;
+        font-size: 1.5em;
     }
 
     .intro p {
-        margin-top: -50px; 
-        margin-left: 40px; 
-        margin-right: 40px; 
-        font-size: 14px;
+        margin-top: -3.125em;
+        margin-left: 2.5em;
+        margin-right: 2.5em;
+        font-size: 0.875em;
     }
 
     .container {
-        transform: translateX(0); 
-        flex-direction: row; 
-        justify-content: space-evenly; 
+        transform: translateX(0);
+        flex-direction: row;
+        justify-content: space-evenly;
         align-items: center;
-        gap: 20px; 
-        margin-top: 118px; 
+        gap: 1.25em;
+        margin-top: 7.375em;
     }
 
     #intro2,
     #intro3,
     #intro4 {
-        width: 180px;
-        height: 160px;
+        width: 11.25em;
+        height: 10em;
     }
 }
 
-
-@media (max-width: 480px) {
+@media (max-width: 30em) { /* 480px */
     #intro1 {
-        width: 200px;
-    height: 200px;
-    margin-top: -470px;
-    margin-left: 22px;
+        width: 12.5em;
+        height: 12.5em;
+        margin-top: -24.375em;
+        margin-left: 1.375em;
     }
 
     .intro h2 {
-        margin-right: 163px;
-        margin-top: -409px;
-    font-size: 26px;
-
+        margin-left: 0.625em;
+    margin-top: -15.312em;
+    font-size: 1.625em;
+    margin-right: 5em;
     }
 
     .intro p {
-        margin-top: -90px;
-        margin-left: 25px;
-        margin-right: 32px;
-        font-size: 14px;
+        margin-top: -3.625em;
+        margin-left: 1.5625em;
+        margin-right: 2em;
+        font-size: 0.875em;
     }
 
     .container {
-        transform: translateX(-6px);
+        transform: translateX(-0.375em);
         flex-direction: row;
         align-items: center;
-        gap: 8px;
-        margin-left: 120px;
-        margin-right: 90px; 
-        
+        gap: 0.5em;
+        margin-left: 7.5em;
+        margin-right: 5.625em;
+        margin-top: 11.625em;
     }
 
     #intro2,
     #intro3,
     #intro4 {
-        width: 100px;
-    height: 100px;
+        width: 6.25em;
+        height: 6.25em;
     }
 }
+
+@media (max-width: 20em) { /* 320px */
+    #intro1 {
+        width: 12.5em;
+        height: 12.5em;
+        margin-top: -26.5em;
+        margin-left: 1.375em;
+    }
+
+    .intro h2 {
+        margin-left: 1.625em;
+        margin-top: -27.3125em;
+        font-size: 1.625em;
+    }
+
+    .intro p {
+        margin-top: -4.375em;
+        margin-left: 1.5625em;
+        margin-right: 2em;
+        font-size: 0.875em;
+    }
+
+    .container {
+        transform: translateX(-0.375em);
+        flex-direction: row;
+        align-items: center;
+        gap: 0.5em;
+        margin-left: 7.5em;
+        margin-right: 5.625em;
+        margin-top: 13.5em;
+    }
+
+    #intro2,
+    #intro3,
+    #intro4 {
+        width: 5.1875em;
+        height: 5.3125em;
+    }
+}
+
+
 
 
 /* END OF INTRODUCTION */
@@ -1089,7 +1205,7 @@ html, body {
 
 
 .paralex {
-/*     background-image:url("/assets/img/office.jpg"); */
+    /* background-image:url("/assets/img/office.jpg"); */
     background-image:url("../img/office.jpg");
     position: relative;
     width: 100%;
@@ -1741,10 +1857,10 @@ button[type="submit"]:hover {
         font-size: 16px;
     }
     .footer-core h4{
-        margin-left:93px;
+        margin-left: 61px;
     }
     .footer-core p{
-        margin-left:131px;
+        margin-left:99px;
     }
     .footer-socials{
         margin-left:-5px;
