--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -1856,6 +1856,9 @@ button[type="submit"]:hover {
     .footer h4 {
         font-size: 16px;
     }
+    .footer-core {
+        display: none;
+    }
     .footer-core h4{
         margin-left: 78px;
     }
@@ -1908,6 +1911,9 @@ button[type="submit"]:hover {
 
     .footer h4 {
         font-size: 18px;
+    }
+    .footer-core {
+        display: none;
     }
 
     .footer-socials a {
