--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -1238,6 +1238,7 @@ html, body {
         margin-top: 10px;
         margin-left: 0; 
         font-weight: 800;
+        padding-left: 9px;
     }
 
   
